apps/harbor/base/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/component: gateway
spec:
  hostnames:
  - harbor.seigra.net
  parentRefs:
  - name: harbor
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    - path:
        type: PathPrefix
        value: /service/
    - path:
        type: PathPrefix
        value: /v2/
    - path:
        type: PathPrefix
        value: /c/
    backendRefs:
    - name: harbor-core
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: harbor-portal
      port: 80
